# ecommerce-listing-ai

./: .env.example  .gitignore  AGENTS.md  README.md
.agents/skills/: README.md
backend/: .env.example  BACKEND_IMPLEMENTATION_AUDIT.md  FRONTEND_COMPATIBILITY_REPORT.md  pyproject.toml
backend/app/: config.py  core.py  main.py  models.py  persistence.py  storage.py  workflow.py
backend/app/boundaries/: __init__.py  interfaces.py
backend/tests/: conftest.py  test_api_contract.py  test_config.py  test_export.py  test_health.py  test_postgres_repository.py  test_repository_uow.py  test_storage.py  test_storage_workflow.py  test_upload_cleanup.py  test_validation_errors.py  test_workflow.py  test_workflow_api.py
backend/tests/integration/: test_postgres_integration.py  test_storage_integration.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  ASSUMPTIONS.md  DATA_SCHEMA.md  DECISIONS.md  DESIGN.md  EXTENSION_ROADMAP.md  FINAL_MVP_HANDOFF.md  FRONTEND_BACKEND_HANDOFF.md  PRODUCT.md  PRODUCTION_NEXT_STEPS.md  V23_API_PLAN.md  V23_DATABASE.md  V23_DATA_MODEL.md  V23_HANDOFF.md  V23_PERSISTENCE.md  V23_REPOSITORY_UOW.md  V23_SCOPE.md  V23_STORAGE.md  WORKFLOW.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
integrations/: README.md
knowledge/: copy-style.md  prohibited-claims.md  required-fields.md  review-rules.md
sample-data/: README.md  expected-issues.json  expected-result.json  sample-products.xlsx
scripts/: start-mvp.ps1  validate_v23_schema.py
supabase/: README.md  config.toml
tests/: README.md
(+101 files in other folders)
