[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-listing-ai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "openpyxl==3.1.5",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = ["httpx==0.28.1", "pytest==8.4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
